--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>Hello World! My name's Coach Kelly and I'm now a web developer.</h1>
+    <h1>Hello World! My name's Coach Kelly and I'm now a web developer. BOOM</h1>
   </body>
 </html>
